[package]
name = "pretty-sure"
version = "0.1.1"
authors = ["Aaron Sikes <aaron@sikes.io>"]
edition = "2018"
description = "Like `.unwrap()` or `.or_else()` for arbitrary patterns"
license = "MIT OR Apache-2.0"
repository = "https://github.com/courajs/pretty-sure"
keywords = ["unwrap", "enum", "pattern", "assert"]

[dependencies]
